# todoist-taskwarrior-sync

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  test_requirements.txt  titwsync
todoist_taskwarrior/: cli.py
