[tool.poetry]
name = "todoist_taskwarrior"
version = "0.1.0"
description = "Todoist <-> Taskwarrior two-way sync"
authors = ["Adam Gaia", "René Jochum", "Matt Snider"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyyaml = "^6.0"
todoist-python = "^8.1.3"
taskw = { path = "./taskw", develop = true }

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
pylint = "^2.15.2"
mypy = "=0.961"

[tool.poetry.scripts]
titwsync = 'todoist_taskwarrior.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

